switched local database to sqlalchemy & neon

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# Database Configuration (Neon)
+DATABASE_URL=postgresql://username:password@hostname:5432/dbname
+
 # Amazon API Credentials
 AMAZON_ACCESS_KEY=your_amazon_access_key_here
 AMAZON_SECRET_KEY=your_amazon_secret_key_here
