enhanced app with API and more

--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,180 @@
-# Database Configuration (Neon)
-DATABASE_URL=postgresql://username:password@hostname:5432/dbname
+# ===================================
+# Application Settings
+# ===================================
 
-# Amazon API Credentials
+# Flask Configuration
+FLASK_ENV=development
+FLASK_APP=app.py
+FLASK_DEBUG=1
+SECRET_KEY=change-this-to-a-secure-random-string
+
+# ===================================
+# Database Configuration
+# ===================================
+
+# PostgreSQL connection string
+DATABASE_URL=postgresql://username:password@localhost:5432/superarb
+
+# Database pool settings
+SQLALCHEMY_DATABASE_URI=${DATABASE_URL}
+SQLALCHEMY_TRACK_MODIFICATIONS=False
+SQLALCHEMY_ENGINE_OPTIONS={"pool_pre_ping": true, "pool_recycle": 300}
+
+# ===================================
+# Redis Configuration (for Celery and Caching)
+# ===================================
+
+REDIS_URL=redis://localhost:6379/0
+CELERY_BROKER_URL=${REDIS_URL}
+CELERY_RESULT_BACKEND=${REDIS_URL}
+CACHE_REDIS_URL=${REDIS_URL}
+
+# ===================================
+# Email Configuration
+# ===================================
+
+MAIL_SERVER=smtp.sendgrid.net
+MAIL_PORT=587
+MAIL_USE_TLS=1
+MAIL_USERNAME=apikey
+MAIL_PASSWORD=your_sendgrid_api_key_here
+MAIL_DEFAULT_SENDER=no-reply@yourdomain.com
+MAIL_DEBUG=0
+
+# ===================================
+# Marketplace API Credentials
+# ===================================
+
+# Amazon Product Advertising API
 AMAZON_ACCESS_KEY=your_amazon_access_key_here
 AMAZON_SECRET_KEY=your_amazon_secret_key_here
 AMAZON_ASSOC_TAG=your_amazon_assoc_tag_here
+AMAZON_REGION=US  # US, UK, DE, etc.
 
-# eBay API Credentials
+# eBay API
 EBAY_APP_ID=your_ebay_app_id_here
 EBAY_CERT_ID=your_ebay_cert_id_here
 EBAY_DEV_ID=your_ebay_dev_id_here
 EBAY_RU_NAME=your_ebay_ru_name_here
+EBAY_ENV=SANDBOX  # or PRODUCTION
 
 # Walmart API
 WALMART_API_KEY=your_walmart_api_key_here
+WALMART_API_URL=https://api.walmartlabs.com/v1
 
 # AliExpress API
 ALIEXPRESS_APP_KEY=your_aliexpress_app_key_here
 ALIEXPRESS_APP_SECRET=your_aliexpress_app_secret_here
+
+# ===================================
+# Authentication & Security
+# ===================================
+
+# JWT Configuration
+JWT_SECRET_KEY=${SECRET_KEY}
+JWT_ACCESS_TOKEN_EXPIRES=3600  # 1 hour
+JWT_REFRESH_TOKEN_EXPIRES=2592000  # 30 days
+
+# Rate Limiting
+RATELIMIT_DEFAULT=200/hour
+RATELIMIT_STORAGE_URL=${REDIS_URL}
+
+# CORS Configuration
+CORS_ORIGINS=*  # In production, replace with specific domains
+
+# ===================================
+# File Uploads
+# ===================================
+
+UPLOAD_FOLDER=./uploads
+MAX_CONTENT_LENGTH=16777216  # 16MB
+ALLOWED_EXTENSIONS={'png', 'jpg', 'jpeg', 'gif', 'pdf'}
+
+# AWS S3 Configuration (optional)
+# AWS_ACCESS_KEY_ID=your_aws_access_key
+# AWS_SECRET_ACCESS_KEY=your_aws_secret_key
+# AWS_S3_BUCKET=your-bucket-name
+# AWS_S3_REGION=us-east-1
+
+# ===================================
+# Background Tasks
+# ===================================
+
+# Celery Configuration
+CELERY_BROKER_URL=${REDIS_URL}
+CELERY_RESULT_BACKEND=${REDIS_URL}
+CELERY_ACCEPT_CONTENT=['json']
+CELERY_TASK_SERIALIZER='json'
+CELERY_RESULT_SERIALIZER='json'
+
+# ===================================
+# Monitoring and Logging
+# ===================================
+
+# Sentry DSN (for error tracking)
+SENTRY_DSN=your_sentry_dsn_here
+
+# Logging
+LOG_LEVEL=INFO
+LOG_FILE=logs/superarb.log
+
+# ===================================
+# Feature Flags
+# ===================================
+
+FEATURE_EMAIL_NOTIFICATIONS=true
+FEATURE_SMS_NOTIFICATIONS=false
+FEATURE_API_DOCS=true
+FEATURE_MAINTENANCE_MODE=false
+
+# ===================================
+# External Services
+# ===================================
+
+# SendGrid Email API
+SENDGRID_API_KEY=your_sendgrid_api_key_here
+
+# Twilio (for SMS notifications)
+TWILIO_ACCOUNT_SID=your_twilio_sid_here
+TWILIO_AUTH_TOKEN=your_twilio_auth_token_here
+TWILIO_PHONE_NUMBER=your_twilio_phone_number
+
+# Google Analytics
+GOOGLE_ANALYTICS_ID=UA-XXXXXXXX-X
+
+# ===================================
+# Development Settings
+# ===================================
+
+# Set to True to enable debug toolbar
+DEBUG_TOOLBAR_ENABLED=False
+
+# Disable CSRF in development for API testing
+WTF_CSRF_ENABLED=True
+
+# ===================================
+# Production Settings
+# ===================================
+
+# Set to True in production
+PREFERRED_URL_SCHEME=https
+SESSION_COOKIE_SECURE=True
+REMEMBER_COOKIE_SECURE=True
+SESSION_COOKIE_HTTPONLY=True
+REMEMBER_COOKIE_HTTPONLY=True
+
+# ===================================
+# API Rate Limits
+# ===================================
+
+# Global rate limits
+API_RATE_LIMIT=1000/day
+API_RATE_LIMIT_PER_ENDPOINT=100/hour
+
+# Marketplace-specific rate limits
+AMAZON_API_RATE_LIMIT=2000/hour
+EBAY_API_RATE_LIMIT=5000/day
+WALMART_API_RATE_LIMIT=1000/hour
 
 # Database Configuration
 DATABASE_URL=sqlite:///data/arbitrage.db
