--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
+# ===================================
 # Python
+# ===================================
 __pycache__/
 *.py[cod]
 *$py.class
@@ -19,28 +21,213 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+.pytest_cache/
+.coverage
+htmlcov/
+.mypy_cache/
 
-# Environment variables
+# ===================================
+# Environment
+# ===================================
 .env
+.env.*
+!.env.example
 .venv
 env/
 venv/
 ENV/
 
+# ===================================
 # Database
+# ===================================
 *.db
 *.sqlite3
+*.sqlite
+*.db-journal
+instance/
+migrations/versions/
 
+# ===================================
 # Logs
+# ===================================
 logs/
 *.log
+*.log.*
 
+# ===================================
 # IDE
+# ===================================
 .vscode/
 .idea/
 *.swp
 *.swo
+*.swn
+*.swo
+.project
+.pydevproject
+.settings/
+.ropeproject/
 
-# OS
+# ===================================
+# OS generated files
+# ===================================
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
+
+# ===================================
+# Project specific
+# ===================================
+uploads/
+media/
+static/files/
+
+# Celery
+celerybeat-schedule
+celerybeat.pid
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# Coverage reports
+coverage/
+.coverage.*
+
+# Documentation
+docs/_build/
+docs/api/
+
+# Local development
+local_settings.py
+local_config.py
+
+# Virtual environments
+.venv*
+
+# Environment files (except example)
+!.env.example
+
+# ===================================
+# Testing
+# ===================================
+.coverage
+htmlcov/
+.pytest_cache/
+.tox/
+
+# ===================================
+# Distribution / packaging
+# ===================================
+*.egg-info/
+*.egg
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+cover/
+
+# Translations
+*.mo
+*.pot
+
+# Django stuff:
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+
+# Flask stuff:
+instance/
+.webassets-cache
+
+# Scrapy stuff:
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+.pybuilder/
+target/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# IPython
+profile_default/
+ipython_config.py
+
+# pyenv
+#   For a library or package, you might want to ignore these files since the code is
+#   intended to run in multiple environments; otherwise, check them in:
+# .python-version
+
+# pipenv
+#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
+#   However, in case of collaboration, if having platform-specific dependencies or dependencies
+#   having no cross-platform support, pipenv may install dependencies that don't work, or not
+#   install all needed dependencies.
+#Pipfile.lock
+
+# PEP 582; used by e.g. github.com/David-OConnor/pyflow
+__pypackages__/
+
+# Celery stuff
+celerybeat-schedule
+celerybeat.pid
+
+# SageMath parsed files
+*.sage.py
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# pytype static type analyzer
+.pytype/
+
+# Cython debug symbols
+cython_debug/
